fix directions panel scroll on mobile

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -172,11 +172,11 @@ td.adp-substep {
     height: auto;
     max-width: 100%;
     width: 100%;
-    max-height: 900px;
+    max-height: 100%;
     font-size: 90%;
     padding: 0;
     text-align: center;
-    overflow: hidden;
+    overflow: scroll;
   }
 
   #map-canvas {
@@ -234,8 +234,8 @@ td.adp-substep {
     border-top: 1px solid lightgray;
     right: 0em;
     margin: 0 auto;
-    overflow: scroll;
-    height: 100%;
+    overflow: visible;
+    height: 900px;
     font-size: .8rem;
   }
 
